名前を入力

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ポートフォリオ | あなたの名前</title>
+  <title>ポートフォリオ | king3326</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -42,24 +42,19 @@
     <h1>あなたの名前</h1>
     <nav>
       <a href="#about">自己紹介</a>
-      <a href="#skills">スキル</a>
-      <a href="#projects">作品</a>
-      <a href="#contact">連絡先</a>
     </nav>
   </header>
 
   <main>
     <section id="about">
       <h2>自己紹介</h2>
-      <p>こんにちは。コンピュータサイエンスを学んでいる大学生です。趣味でWebアプリを作っています。</p>
+      <p>こんにちは。コンピュータサイエンスを学んでいる大学生です。</p>
     </section>
 
     <section id="skills">
       <h2>スキル</h2>
       <ul>
         <li>HTML / CSS / JavaScript</li>
-        <li>Go / Python / Java</li>
-        <li>SQLite / MySQL</li>
         <li>Git / GitHub</li>
         <li>Linux (Arch Linux)</li>
       </ul>
@@ -69,20 +64,17 @@
       <h2>作品</h2>
       <ul>
         <li><strong>Todoリストアプリ</strong> - Go + SQLite で作成</li>
-        <li><strong>イントロクイズアプリ</strong> - ポケモンのBGMイントロを当てるゲーム</li>
-        <li><strong>Javaの課題集</strong> - 大学の演習で作成したプログラム</li>
       </ul>
     </section>
 
     <section id="contact">
       <h2>連絡先</h2>
-      <p>Email: your.email@example.com</p>
       <p>GitHub: <a href="https://github.com/king68312" target="_blank">github.com/king68312</a></p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 あなたの名前</p>
+    <p>&copy; 2025 king3326</p>
   </footer>
 
 </body>
